<!--
 Copyright [2017] [Muhammad Elsayed]

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Guardian Echo</string>
    <string name="no_news">No news found</string>
    <string name="no_internet_connection">No internet connection</string>

    <!--BottomNavigationDrawer Strings-->
    <string name="title_home">Home</string>
    <string name="title_sources">Sources</string>
    <string name="title_shortcuts">Shortcuts</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="arrow"><![CDATA[>]]></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="australia_headlines">Australia Headlines</string>
    <string name="uk_headlines">UK Headlines</string>
    <string name="us_headlines">US Headlines</string>
    <string name="international_headlines">International Headlines</string>
    <string name="art_amp_design"><![CDATA[Art & Design]]></string>
    <string name="books">Books</string>
    <string name="culture">Culture</string>
    <string name="business">Business</string>
    <string name="football">Football</string>
    <string name="film">Film</string>
    <string name="fashion">Fashion</string>
    <string name="environment">Environment</string>
    <string name="education">Education</string>
    <string name="law">Law</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="media">Media</string>
    <string name="money">Money</string>
    <string name="music">Music</string>
    <string name="politics">Politics</string>
    <string name="science">Science</string>
    <string name="society">Society</string>
    <string name="sport">Sport</string>
    <string name="technology">Technology</string>
    <string name="travel">Travel</string>
    <string name="tv_amp_radio"><![CDATA[TV & Radio]]></string>
    <string name="weather">Weather</string>
    <string name="the_guardian_echo">The Guardian Echo</string>
    <string name="the_guardian">The Guardian</string>
    <string name="no_results">No Results!</string>
    <string name="no_saved_articles">No Saved Articles!</string>
    <string name="search_headlines">Search Headlines</string>
    <string name="my_account">My Account</string>
    <string name="no_history_articles">No History Articles!</string>
    <string name="filter_news">Filter News</string>
    <string name="default_edition">Default Edition</string>
    <string name="read_article_in">Read Article In</string>
    <string name="contact_us">Contact Us</string>
    <string name="topics">TOPICS</string>
    <string name="system_browser">System browser</string>
    <string name="in_app_browser">In-app browser</string>
    <string name="my_email">My Email</string>
    <string name="save_changes">Save Changes</string>
    <string name="tell_us_what_s_on_your_mind">Tell us what\'s on your mind</string>
    <string name="send">send</string>
    <string name="settings_preferences">com.muhammadelsayed.echo.settings_preferences</string>
    <string name="reorder_sections">Reorder Sections</string>
    <string name="reset">RESET</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>

    <!--THESE ARE NOT TO MISS WITH, AT ANY CIRCUMSTANCES-->
    <!--THESE ARE USED FOR THE NAVIGATION DRAWER MENU ITEMS AS AN EXCHANGE OF ID'S-->
    <!--THESE ARE LIFE SAVERS-->
    <!--DO NOT ALTER OR DELETE ANY OF THEM-->
    <string name="nav_au_news">nav_au_news</string>
    <string name="nav_uk_news">nav_uk_news</string>
    <string name="nav_us_news">nav_us_news</string>
    <string name="nav_news">nav_news</string>
    <string name="nav_art_design">nav_art_design</string>
    <string name="nav_books">nav_books</string>
    <string name="nav_business">nav_business</string>
    <string name="nav_culture">nav_culture</string>
    <string name="nav_education">nav_education</string>
    <string name="nav_environment">nav_environment</string>
    <string name="nav_fashion">nav_fashion</string>
    <string name="nav_film">nav_film</string>
    <string name="nav_football">nav_football</string>
    <string name="nav_law">nav_law</string>
    <string name="nav_lifestyle">nav_lifestyle</string>
    <string name="nav_media">nav_media</string>
    <string name="nav_money">nav_money</string>
    <string name="nav_music">nav_music</string>
    <string name="nav_politics">nav_politics</string>
    <string name="nav_science">nav_science</string>
    <string name="nav_society">nav_society</string>
    <string name="nav_sport">nav_sport</string>
    <string name="nav_technology">nav_technology</string>
    <string name="nav_travel">nav_travel</string>
    <string name="nav_tv_radio">nav_tv_radio</string>
    <string name="nav_weather">nav_weather</string>
    <!--CLOSING TAG-->

    <string name="no_data">Loading ...</string>
    <string name="null_str">NULL</string>
    <string name="empty">empty</string>
    <string name="notifications">Notifications</string>
    <string name="pen">pen</string>
    <string name="log_in">Log In</string>
    <string name="news_adapter_date_pattern">MM/dd/yy \'at\' h:mm a</string>

</resources>
