<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/widget_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/widget_header_section_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/appwidget_text"
            android:text="@string/international_headlines"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <ImageButton
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="#000"
            android:src="@drawable/ic_refresh_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/widget_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/widget_news_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/transparent"
            android:transcriptMode="alwaysScroll"
            tools:listitem="@layout/widget_list_item" />
    </LinearLayout>


    <!-- Empty view is show if list items are empty -->
    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/no_data"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp"
        android:visibility="gone" />

</LinearLayout>