<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Fragments.App.SettingsFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Log in-->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:paddingBottom="24dp"
            android:paddingTop="24dp"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent">

            <ImageView
                android:id="@+id/login_person_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_person_black_24dp" />

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/log_in"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@id/login_person_image" />
        </android.support.constraint.ConstraintLayout>

        <!--Account-->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/my_account_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:paddingBottom="24dp"
            android:paddingTop="24dp"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_layout">

            <ImageView
                android:id="@+id/person_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_person_black_24dp" />

            <TextView
                android:id="@+id/my_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/my_account"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@id/person_image" />
        </android.support.constraint.ConstraintLayout>

        <View
            android:id="@+id/account_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_account_layout" />
        <!--News Filter-->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/news_filter_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:paddingBottom="24dp"
            android:paddingTop="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_divider">

            <ImageView
                android:id="@+id/filter_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_filter_list_black_24dp" />

            <TextView
                android:id="@+id/filter_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/filter_news"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@id/filter_image" />
        </android.support.constraint.ConstraintLayout>

        <View
            android:id="@+id/reorder_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/news_filter_layout" />
        <!--Reorder Sections-->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/reorder_news_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:paddingBottom="24dp"
            android:paddingTop="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reorder_divider">

            <ImageView
                android:id="@+id/reorder_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_unfold_more_black_24dp" />

            <TextView
                android:id="@+id/reorder_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/reorder_sections"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@id/reorder_image" />
        </android.support.constraint.ConstraintLayout>

        <View
            android:id="@+id/edition_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reorder_news_layout" />
        <!--Default Edition-->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/default_edition_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:paddingBottom="24dp"
            android:paddingTop="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edition_divider">

            <ImageView
                android:id="@+id/edition_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_public_black_24dp" />

            <TextView
                android:id="@+id/edition_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/default_edition"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@id/edition_image" />
        </android.support.constraint.ConstraintLayout>

        <View
            android:id="@+id/article_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/default_edition_layout" />
        <!--Article-->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/read_article_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:paddingBottom="24dp"
            android:paddingTop="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/article_divider">

            <ImageView
                android:id="@+id/archive_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_unarchive_black_24dp" />

            <TextView
                android:id="@+id/article_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/read_article_in"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@id/archive_image" />
        </android.support.constraint.ConstraintLayout>


        <View
            android:id="@+id/notifications_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/read_article_layout" />
        <!--Notification-->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/notifications_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:paddingBottom="24dp"
            android:paddingTop="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notifications_divider">

            <ImageView
                android:id="@+id/notifications_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_notifications_black_24dp" />

            <TextView
                android:id="@+id/notifications_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/notifications"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@id/notifications_image" />
        </android.support.constraint.ConstraintLayout>

        <View
            android:id="@+id/contact_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notifications_layout" />
        <!--contact us-->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/contact_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:paddingBottom="24dp"
            android:paddingTop="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contact_divider">

            <ImageView
                android:id="@+id/contact_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_messege_black_24dp" />

            <TextView
                android:id="@+id/contact_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/contact_us"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@id/contact_image" />
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>